--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<a>Flatiron School
-<ahref https://flatironschool.com </ahref>
+<a>Flatiron School</a>
+<ahref https://flatironschool.com </ahref></ahref>
 
 
-</a>
+
